vir-derive/tests/snapshots/high_parser__implies-2.snap
---
source: vir-derive/tests/high_parser.rs
expression: program
---
sorts: []
axioms: []
functions: []
procedure:
  variables:
    - name: a
      sort: Bool
  basic_blocks:
    - label: entry
      guard:
        Constant:
          Bool: true
      statements: []
      successors:
        - 1
    - label: bb1
      guard:
        BinaryOperation:
          kind: Implies
          left:
            Constant:
              Bool: true
          right:
            Constant:
              Bool: false
      statements:
        - Assume:
            assertion:
              BinaryOperation:
                kind: Implies
                left:
                  BinaryOperation:
                    kind: And
                    left:
                      BinaryOperation:
                        kind: And
                        left:
                          Variable:
                            name: a
                        right:
                          Variable:
                            name: a
                    right:
                      UnaryOperation:
                        kind: Not
                        arg:
                          Variable:
                            name: a
                right:
                  BinaryOperation:
                    kind: Or
                    left:
                      BinaryOperation:
                        kind: And
                        left:
                          UnaryOperation:
                            kind: Not
                            arg:
                              Variable:
                                name: a
                        right:
                          Variable:
                            name: a
                    right:
                      Variable:
                        name: a
            label: label1
        - Assume:
            assertion:
              BinaryOperation:
                kind: Implies
                left:
                  BinaryOperation:
                    kind: Or
                    left:
                      BinaryOperation:
                        kind: And
                        left:
                          Variable:
                            name: a
                        right:
                          UnaryOperation:
                            kind: Not
                            arg:
                              Variable:
                                name: a
                    right:
                      Variable:
                        name: a
                right:
                  Variable:
                    name: a
            label: label2
      successors:
        - 2
    - label: exit
      guard:
        Constant:
          Bool: true
      statements: []
      successors: []
