vir-derive/tests/snapshots/high_parser__unary_expression.snap
---
source: vir-derive/tests/high_parser.rs
expression: program
---
sorts: []
axioms: []
functions: []
procedure:
  variables:
    - name: a
      sort: Bool
  basic_blocks:
    - label: entry
      guard:
        Constant:
          Bool: true
      statements: []
      successors:
        - 1
    - label: bb1
      guard:
        BinaryOperation:
          kind: And
          left:
            UnaryOperation:
              kind: Not
              arg:
                Variable:
                  name: a
          right:
            Constant:
              Bool: true
      statements: []
      successors:
        - 2
    - label: exit
      guard:
        Constant:
          Bool: true
      statements: []
      successors: []
